# aoc21

./: Cargo.toml  README.md  run.sh
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  dayX.rs  main.rs  prelude.rs
